fixed various issues with the user routes
